--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build-lzblue
+name: build-lazyblue
 on:
   workflow_dispatch:
   pull_request:
@@ -12,7 +12,7 @@ on:
     paths-ignore:
       - '**/README.md'
 env:
-    IMAGE_NAME: lzblue
+    IMAGE_NAME: lazyblue
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
